--- a/ch01.md
+++ b/ch01.md
@@ -18,7 +18,7 @@
 | _ | Underline (언더라인)  | 언더바, 밑줄 |
 | ()| Parenthesis (퍼렌씨시스) | 괄호 | 
 | {}| Brace (브래이스) | 중괄호 |
-| []| Brace (브래이스) | 대괄호 |
+| []| Braket (브라켓) | 대괄호 |
 | \ | Back Slash (백 슬래쉬) | 백 슬래쉬 |
 |ㅣ | Vertical Bar (버티컬 바) | 파이프 |
 | : | Colon (콜론) | 콜론, 땡땡이 |
